課題の再提出

--- a/kadai_tutorial_output/stylesheet/style.css
+++ b/kadai_tutorial_output/stylesheet/style.css
@@ -278,7 +278,7 @@ height: 32rem;
     position: relative;
   }
 
-.copy_right>p, img {	.copy_right>p,img {
+.copy_right>p, img {
 margin-right: 1rem;	
 font-size: 14px;	
 margin: 0;	
